update report service

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,3 +18,6 @@ spring.sleuth.sampler.probability=1.0
 #spring.zipkin.base-url=http://127.0.0.1:9411/
 #spring.zipkin.sender.type=RABBIT
 report.hours=72
+currency.conversion.report.cron=*/5 * * * * ?
+currency.inquiry.report.cron=*/5 * * * * ?
+app.server.mail.url=http://localhost:9999
