--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server
 server.port=9991
-spring.profiles.active=test
-spring.application.name=api-gateway
+spring.profiles.active=dev
+spring.application.name=report-service
 #eureka
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka
 #spring.cloud.gateway.discovery.locator.enabled=true
