--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@
 spring.jpa.database=H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:client_requests
+spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
@@ -13,3 +15,8 @@ spring.sleuth.sampler.probability=1.0
 #default zipkin URL
 #spring.zipkin.base-url=http://127.0.0.1:9411/
 #spring.zipkin.sender.type=RABBIT
+report.hours=72
+send.report=true
+currency.conversion.report.cron=*/5 * * * * ?
+currency.inquiry.report.cron=*/5 * * * * ?
+app.server.mail.url=http://localhost:9999
